BugLists.txt
## 1
/home/fyl/Desktop/vision_based_navigation/vslam_project_rewrite/src/VisualSLAM.cpp: In member function ‘int VisualSLAM::getTestValueFromMap()’:
/home/fyl/Desktop/vision_based_navigation/vslam_project_rewrite/src/VisualSLAM.cpp:6:25: error: void value not ignored as it ought to be
     return map.getValue();
                         ^
CMakeFiles/testVSLAM.dir/build.make:86: recipe for target 'CMakeFiles/testVSLAM.dir/src/VisualSLAM.cpp.o' failed


#solve: all function here should be int instead of void

## 2
 error: definition of implicitly-declared ‘Map::Map()’
 Map::Map() 

 note: ‘Map::Map()’ previously defined here
     Map(){};


#solve: change " Map(){};" in class Map{  } to ---> "Map();"

## 3
 if I want to have in VisualSLAM.cpp file

"#include "VisualSLAM.h"

VisualSLAM::VisualSLAM() {}
"
I need to  change " VisualSLAM(){};" in .h file of class Map{  } to ---> "VisualSLAM();"

## 4
terminate called after throwing an instance of 'std::logic_error'
  what():  basic_string::_M_construct null not valid

#solve: the input I did has a wrong , should input image and then datafile, I inverse the input

## 5
error: invalid conversion from ‘const char*’ to ‘int’ [-fpermissive]
     int num_images = argv[3];
solve: int num_images = std::stoi(argv[3]);

## 6
OpenCV Error: Bad number of channels (Source image must have 1, 3 or 4 channels) in cvConvertImage, file /tmp/binarydeb/ros-kinetic-opencv3-3.3.1/modules/imgcodecs/src/utils.cpp, line 622
terminate called after throwing an instance of 'cv::Exception'

#solve:         // show corners
               cv::namedWindow("use corners",CV_WINDOW_AUTOSIZE);
               cv::imshow("use corners",currFrame2DPoints);
               cv::waitKey();
       --------->
       //       cv::namedWindow("leftImage",CV_WINDOW_AUTOSIZE);
       //       cv::imshow("leftImage",leftImage);
       //       cv::waitKey();

##7
 error: ‘previousImage’ was not declared in this scope
         leftImage.copyTo(previousImage);
#solve:  peviousImage -->previousImage


